@@ -46,32 +46,25 @@ protected:
 	// Generated message map functions
 	//{{AFX_MSG(LineFiltersDlg)
 	virtual BOOL OnInitDialog();
-	afx_msg void OnIgnoreregexp();
 	afx_msg void OnHelp();
 	virtual void OnOK();
 	afx_msg void OnBnClickedLfilterAddBtn();
 	afx_msg void OnBnClickedLfilterEditbtn();
 	afx_msg void OnBnClickedLfilterRemovebtn();
-	virtual BOOL PreTranslateMessage(MSG* pMsg);
-	afx_msg void OnBnClickedLfilterEditsave();
 	afx_msg void OnLvnItemActivateLfilterList(NMHDR *pNMHDR, LRESULT *pResult);
-	afx_msg void OnEnKillfocusLfilterEditbox();
+	afx_msg void OnLvnKeyDownLfilterList(NMHDR *pNMHDR, LRESULT *pResult);
+	afx_msg void OnEndLabelEditLfilterList(NMHDR *pNMHDR, LRESULT *pResult);
 	//}}AFX_MSG
 	DECLARE_MESSAGE_MAP()
 
 	void InitList();
 	int AddRow(LPCTSTR filter = NULL, BOOL enabled = FALSE);
 	void EditSelectedFilter();
-	void SaveItem();
 
 private:
 	CListCtrl m_filtersList; /**< List control having filter strings */
-	CEdit m_editRegexp; /**< Editbox for editing filter */
-	CButton m_saveRegexp; /**< Button for saving edited filter */
 
 	LineFiltersList * m_pList; /**< Helper list for getting/setting filters. */
-	BOOL m_bEditing; /**< Are we editing a filter string? */
-	int m_editedIndex; /**< Index of the item being edited. */
 };
 
 //{{AFX_INSERT_LOCATION}}
