@@ -895,10 +895,7 @@ BEGIN
                     351,8
     CONTROL         "",IDC_LFILTER_LIST,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_EDITLABELS | 
-                    LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,8,39,350,105
-    EDITTEXT        IDC_LFILTER_EDITBOX,7,149,296,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    PUSHBUTTON      "Save",IDC_LFILTER_EDITSAVE,308,148,50,14,WS_DISABLED
+                    LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,8,39,350,121
     PUSHBUTTON      "New",IDC_LFILTER_ADDBTN,7,167,50,14
     PUSHBUTTON      "Edit",IDC_LFILTER_EDITBTN,62,167,50,14
     PUSHBUTTON      "Remove",IDC_LFILTER_REMOVEBTN,116,167,50,14
